update Puppeteer launch arguments (#51)
* update Puppeteer launch arguments

* Fix a code path where masking could be skipped on textareas (#1599)

* Fixes #1596

* update changeset

---------

Co-authored-by: Eoghan Murray <eoghan@getthere.ie>

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,6 +7,8 @@ concurrency: ${{ github.workflow }}-${{ github.ref }}
 jobs:
   release:
     name: Tests
+    permissions:
+      contents: read
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
@@ -19,7 +21,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: lts/*
-      
+
       - name: Install Dependencies
         run: yarn install --frozen-lockfile
 
