The verdict from jsdelivr is that they are not going to change the `application/node` mime type for  (see https://github.com/jsdelivr/jsdelivr/issues/18584 ), so we need to revert the extension to `.umd.js` in order that these files can be used in a browser via jsdelivr as per docs (prior to #1033 we shipped these as `.js`)

--- a/packages/plugins/rrweb-plugin-canvas-webrtc-replay/package.json
+++ b/packages/plugins/rrweb-plugin-canvas-webrtc-replay/package.json
@@ -3,9 +3,9 @@
   "version": "2.0.0-alpha.18",
   "description": "",
   "type": "module",
-  "main": "./dist/rrweb-plugin-canvas-webrtc-replay.umd.cjs",
+  "main": "./dist/rrweb-plugin-canvas-webrtc-replay.umd.js",
   "module": "./dist/rrweb-plugin-canvas-webrtc-replay.js",
-  "unpkg": "./dist/rrweb-plugin-canvas-webrtc-replay.umd.cjs",
+  "unpkg": "./dist/rrweb-plugin-canvas-webrtc-replay.umd.js",
   "typings": "dist/index.d.ts",
   "exports": {
     ".": {
