--- a/packages/record/package.json
+++ b/packages/record/package.json
@@ -29,7 +29,7 @@
   "type": "module",
   "main": "./dist/record.cjs",
   "module": "./dist/record.js",
-  "unpkg": "./dist/record.umd.cjs",
+  "unpkg": "./dist/record.umd.js",
   "typings": "dist/index.d.ts",
   "exports": {
     ".": {
