--- a/packages/plugins/rrweb-plugin-canvas-webrtc-record/package.json
+++ b/packages/plugins/rrweb-plugin-canvas-webrtc-record/package.json
@@ -3,9 +3,9 @@
   "version": "2.0.0-alpha.18",
   "description": "",
   "type": "module",
-  "main": "./dist/rrweb-plugin-canvas-webrtc-record.umd.cjs",
+  "main": "./dist/rrweb-plugin-canvas-webrtc-record.umd.js",
   "module": "./dist/rrweb-plugin-canvas-webrtc-record.js",
-  "unpkg": "./dist/rrweb-plugin-canvas-webrtc-record.umd.cjs",
+  "unpkg": "./dist/rrweb-plugin-canvas-webrtc-record.umd.js",
   "typings": "dist/index.d.ts",
   "exports": {
     ".": {
