--- a/packages/replay/package.json
+++ b/packages/replay/package.json
@@ -29,7 +29,7 @@
   "type": "module",
   "main": "./dist/replay.cjs",
   "module": "./dist/replay.js",
-  "unpkg": "./dist/replay.umd.cjs",
+  "unpkg": "./dist/replay.umd.js",
   "typings": "dist/index.d.ts",
   "exports": {
     ".": {
