feat: network plugin (xhr/fetch)

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -22,7 +22,9 @@
       "@rrweb/rrweb-plugin-sequential-id-record",
       "@rrweb/rrweb-plugin-sequential-id-replay",
       "@rrweb/rrweb-plugin-canvas-webrtc-record",
-      "@rrweb/rrweb-plugin-canvas-webrtc-replay"
+      "@rrweb/rrweb-plugin-canvas-webrtc-replay",
+      "@rrweb/rrweb-plugin-network-record",
+      "@rrweb/rrweb-plugin-network-replay"
     ]
   ],
   "linked": [],
