--- a/packages/record/package.json
+++ b/packages/record/package.json
@@ -1,13 +1,6 @@
 {
-  "name": "@rrweb/record",
-  "version": "2.0.0-alpha.18",
-  "publishConfig": {
-    "access": "public"
-  },
-  "keywords": [
-    "rrweb",
-    "@rrweb/record"
-  ],
+  "name": "@glimt/record",
+  "version": "0.0.1",
   "scripts": {
     "dev": "vite build --watch",
     "build": "yarn turbo run prepublish",
@@ -16,14 +9,6 @@
     "check-types": "tsc -noEmit",
     "prepublish": "tsc -noEmit && vite build",
     "lint": "yarn eslint src/**/*.ts"
-  },
-  "homepage": "https://github.com/rrweb-io/rrweb/tree/main/packages/@rrweb/record#readme",
-  "bugs": {
-    "url": "https://github.com/rrweb-io/rrweb/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rrweb-io/rrweb.git"
   },
   "license": "MIT",
   "type": "module",
