--- a/packages/rrweb/package.json
+++ b/packages/rrweb/package.json
@@ -5,22 +5,22 @@
   "scripts": {
     "prepare": "npm run prepack",
     "prepack": "npm run build",
-    "retest": "cross-env PUPPETEER_HEADLESS=true yarn retest:headful",
+    "retest": "cross-env PUPPETEER_HEADLESS=true npm run retest:headful",
     "retest:headful": "vitest run --exclude test/benchmark",
-    "build-and-test": "yarn build && yarn retest",
-    "test:headless": "cross-env PUPPETEER_HEADLESS=true yarn build-and-test",
-    "test:headful": "cross-env PUPPETEER_HEADLESS=false yarn build-and-test",
-    "test": "yarn test:headless",
-    "test:watch": "yarn build && cross-env PUPPETEER_HEADLESS=true yarn vitest --exclude test/benchmark",
-    "test:update": "yarn test:headless --update",
-    "retest:update": "cross-env PUPPETEER_HEADLESS=true yarn retest --update",
-    "repl": "yarn build && node scripts/repl.js",
-    "live-stream": "yarn build && node scripts/stream.js",
+    "build-and-test": "npm run build && npm run retest",
+    "test:headless": "cross-env PUPPETEER_HEADLESS=true npm run build-and-test",
+    "test:headful": "cross-env PUPPETEER_HEADLESS=false npm run build-and-test",
+    "test": "npm run test:headless",
+    "test:watch": "npm run build && cross-env PUPPETEER_HEADLESS=true npm run vitest --exclude test/benchmark",
+    "test:update": "npm run test:headless --update",
+    "retest:update": "cross-env PUPPETEER_HEADLESS=true npm run retest --update",
+    "repl": "npm run build && node scripts/repl.js",
+    "live-stream": "npm run build && node scripts/stream.js",
     "dev": "vite build --watch",
-    "build": "yarn turbo run prepublish",
+    "build": "npm run prepublish",
     "check-types": "tsc -noEmit",
     "prepublish": "tsc -noEmit && vite build",
-    "lint": "yarn eslint src",
+    "lint": "npm run eslint src",
     "benchmark": "vitest run --maxConcurrency 1 --no-file-parallelism test/benchmark"
   },
   "type": "module",
@@ -67,7 +67,6 @@
     "simple-peer-light": "^9.10.0",
     "ts-node": "^10.9.1",
     "tslib": "^2.3.1",
-    "turbo": "^2.5.3",
     "typescript": "^5.4.5",
     "vite": "^5.3.1",
     "vite-plugin-dts": "^3.9.1"
