--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
           node-version: lts/*
 
       - name: Install Dependencies
-        run: yarn install --frozen-lockfile
+        run: PUPPETEER_SKIP_DOWNLOAD=true yarn install --frozen-lockfile
 
       - name: Create Release Pull Request or Publish to npm
         id: changesets
