--- a/.github/workflows/style-check.yml
+++ b/.github/workflows/style-check.yml
@@ -20,7 +20,7 @@ jobs:
           node-version: lts/*
           cache: 'yarn'
       - name: Install Dependencies
-        run: yarn install --frozen-lockfile
+        run: PUPPETEER_SKIP_DOWNLOAD=true yarn install --frozen-lockfile
       - name: Build Packages
         run: NODE_OPTIONS='--max-old-space-size=4096' yarn build:all
       - name: Eslint Check
@@ -71,7 +71,7 @@ jobs:
           node-version: lts/*
           cache: 'yarn'
       - name: Install Dependencies
-        run: yarn install --frozen-lockfile
+        run: PUPPETEER_SKIP_DOWNLOAD=true yarn install --frozen-lockfile
       - name: Prettier Check
         run: yarn prettier --check '**/*.{ts,md}'
 
@@ -93,7 +93,7 @@ jobs:
           node-version: lts/*
           cache: 'yarn'
       - name: Install Dependencies
-        run: yarn install --frozen-lockfile
+        run: PUPPETEER_SKIP_DOWNLOAD=true yarn install --frozen-lockfile
       - name: Prettify Code
         run: yarn prettier --write '**/*.{ts,md}'
       - name: Commit Changes
