fix: Parse error in nightly job

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -18,8 +18,7 @@ jobs:
         with:
           node-version: lts/*
 
-      - name: Fetch latest releases
-        id: fetch_releases
+      - name: Create issues for latest releases
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
@@ -28,21 +27,7 @@ jobs:
 
           # Fetch the latest releases from the target repository
           releases=$(gh api repos/$TARGET_REPO/releases --jq '.[] | select(.tag_name | startswith("rrweb@")) | {tag_name, html_url}')
-
-          # Define a unique delimiter
-          EOF_DELIMITER=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
-
-          # Output releases for next step
-          echo "releases<<$EOF_DELIMITER" >> $GITHUB_OUTPUT
-          echo "$releases" >> $GITHUB_OUTPUT
-          echo "$EOF_DELIMITER" >> $GITHUB_OUTPUT
-
-      - name: Check and create issues
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          # Input releases from previous step
-          releases='${{ fromJSON(steps.fetch_releases.outputs.releases) }}'
+          issues=$(gh api repos/${{ github.repository }}/issues)
 
           # Iterate over each release
           echo "$releases" | jq -c '.' | while read -r release; do
@@ -50,7 +35,7 @@ jobs:
             html_url=$(echo "$release" | jq -r '.html_url')
 
             # Check if an issue already exists for this release
-            existing_issue=$(gh api repos/${{ github.repository }}/issues --jq '.[] | select(.title == "Release: " + env.tag_name)')
+            existing_issue=$(echo "$issues" | jq -r --arg tag_name "$tag_name" '.[] | select(.title == "Release: " + $tag_name) | .number')
 
             if [ -z "$existing_issue" ]; then
               # Create a new issue if it doesn't exist
