--- a/packages/rrweb-snapshot/package.json
+++ b/packages/rrweb-snapshot/package.json
@@ -47,6 +47,7 @@
     "dist",
     "package.json"
   ],
+  "publishConfig": { "access": "public" },
   "author": "yanzhen@smartx.com",
   "license": "MIT",
   "bugs": {
