--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,10 +1,55 @@
-name: Tests
+name: CI/CD Checks
 
 on: [push, pull_request]
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 jobs:
+  changeset-guard:
+    name: Changeset Guard
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request'
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Detect changed files
+        id: diff
+        run: |
+          git fetch origin master --depth=1 || true
+          CHANGED=$(git diff --name-only origin/master...HEAD)
+          echo "changed<<EOF" >> $GITHUB_OUTPUT
+          echo "$CHANGED" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+      - name: Check for changeset file
+        id: has_changeset
+        run: |
+          if git diff --name-only origin/master...HEAD | grep -q '^\.changeset/.*\.md$'; then
+            echo "present=true" >> $GITHUB_OUTPUT
+          else
+            echo "present=false" >> $GITHUB_OUTPUT
+          fi
+      - name: Enforce changeset
+        run: |
+          # Fail if no changeset AND workspace code or package.json changed AND no skip label present
+          SKIP_LABEL=$(jq -r '.pull_request.labels[].name? // empty' "$GITHUB_EVENT_PATH" | grep -E '^skip-changeset$' || true)
+          if [ "${{ steps.has_changeset.outputs.present }}" = "false" ]; then
+            # Filter out test-only changes (paths containing /test/ or __tests__ or __image_snapshots__) before deciding
+            NON_TEST_CHANGES=$(echo "${{ steps.diff.outputs.changed }}" | grep -E '(^|/)packages/|package.json' | grep -Ev '/test/|__tests__|__image_snapshots__' || true)
+            if [ -n "$NON_TEST_CHANGES" ]; then
+              if [ -z "$SKIP_LABEL" ]; then
+                echo "::error::Workspace/source changes detected but no changeset file was added. Run 'npx changeset' and commit the generated file, or label the PR with 'skip-changeset' for docs/test-only changes.";
+                exit 1;
+              else
+                echo "Skip label present; bypassing changeset requirement.";
+              fi
+            else
+              echo "Only test/docs or excluded paths changed; no changeset required.";
+            fi
+          else
+            echo "Changeset file detected; proceeding.";
+          fi
   release:
     name: Tests
     permissions:
