feat: Add `@rrweb/record` dependency to `ws-client`, introduce a script to filter changesets for releases, and refine `ws-client` types.
Fixes linting/building/typechecking

--- a/packages/ws-client/package.json
+++ b/packages/ws-client/package.json
@@ -59,6 +59,7 @@
     "@rrweb/types": "^2.0.0-alpha.18",
     "@rrweb/utils": "^2.0.0-alpha.18",
     "rrweb": "^2.0.0-alpha.18",
+    "@rrweb/record": "^2.0.0-alpha.18",
     "websocket-ts": "^2.2.1"
   },
   "browserslist": [
