chore: Set `private: true` for all packages without @rrwebcloud prefix and add a script to automate this configuration.

--- a/packages/rrweb-player/package.json
+++ b/packages/rrweb-player/package.json
@@ -67,5 +67,6 @@
   "bugs": {
     "url": "https://github.com/rrweb-io/rrweb/issues"
   },
-  "homepage": "https://github.com/rrweb-io/rrweb#readme"
+  "homepage": "https://github.com/rrweb-io/rrweb#readme",
+  "private": true
 }
