--- a/packages/ws-client/package.json
+++ b/packages/ws-client/package.json
@@ -28,19 +28,19 @@
   },
   "license": "MIT",
   "type": "module",
-  "main": "./dist/ws-client.cjs",
-  "module": "./dist/ws-client.js",
-  "unpkg": "./dist/ws-client.umd.cjs",
+  "main": "./dist/js-client.cjs",
+  "module": "./dist/js-client.js",
+  "unpkg": "./dist/js-client.umd.cjs",
   "typings": "dist/index.d.ts",
   "exports": {
     ".": {
       "import": {
         "types": "./dist/index.d.ts",
-        "default": "./dist/ws-client.js"
+        "default": "./dist/js-client.js"
       },
       "require": {
         "types": "./dist/index.d.cts",
-        "default": "./dist/ws-client.cjs"
+        "default": "./dist/js-client.cjs"
       }
     }
   },
