--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Build Project
         run: NODE_OPTIONS='--max-old-space-size=4096' yarn build:all
 
+      - name: Install Playwright browsers
+        run: cd packages/rrvideo && yarn playwright install chromium
+
       - name: Check types
         run: yarn check-types
 
