Add permissions for contents and pull-requests
We restricted the permissions so we have to re-add them for the release process.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,10 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
-    steps:
+      permissions:                                                         
+        contents: write                                                    
+        pull-requests: write                                               
+      steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
 
