Allow the 'Check bundle sizes' added in #1630 to post a comment to the PR

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,6 +9,7 @@ jobs:
     name: Tests
     permissions:
       contents: read
+      pull-requests: write
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
