--- a/.github/workflows/style-check.yml
+++ b/.github/workflows/style-check.yml
@@ -55,6 +55,34 @@ jobs:
           repo-token: '${{ secrets.GITHUB_TOKEN }}'
           report-json: 'eslint_report.json'
 
+  bundle_size:
+    # Only runs on PRs (needs a base branch to compare against)
+    if: github.event_name == 'pull_request_target'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
+    name: Check Bundle Sizes
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
+          ref: ${{ github.head_ref }}
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: lts/*
+          cache: 'yarn'
+      - name: Check bundle sizes
+        uses: preactjs/compressed-size-action@v2
+        with:
+          install-script: 'yarn install --frozen-lockfile'
+          build-script: 'build:all'
+          compression: 'none'
+          pattern: '**/dist/*.{js,cjs,mjs,css}'
+        env:
+          PUPPETEER_SKIP_DOWNLOAD: true
+
   prettier_check:
     # In the forked PR, it's hard to format code and push to the branch directly, so the action only check the format correctness.
     if: github.event_name != 'push' && github.event.pull_request.head.repo.full_name != 'rrweb-io/rrweb'
