Move the blanket `moduleSideEffects: false` into the rrweb-snapshot package so that it's more targeted - that's the only material affect the blanket version was affecting

--- a/packages/rrweb-snapshot/package.json
+++ b/packages/rrweb-snapshot/package.json
@@ -43,6 +43,8 @@
       }
     }
   },
+  "//": "sideEffects: false - allow packages/record/ to drop rebuild.ts and css.ts during tree shaking",
+  "sideEffects": false,
   "files": [
     "dist",
     "package.json"
