chore: switch base tsconfig moduleResolution to bundler

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -7,7 +7,7 @@
     "esModuleInterop": true,
     "target": "ESNext",
     "module": "ESNext",
-    "moduleResolution": "Node",
+    "moduleResolution": "bundler",
     "rootDir": "src",
     "outDir": "dist",
     "lib": ["es6", "dom"],
